Fix picture move on cropper drag bug

--- a/src/sass/vic-v2.scss
+++ b/src/sass/vic-v2.scss
@@ -127,22 +127,10 @@ input[type=range] {
 .cropper-view-box:after {
   content: " ";
   position: absolute;
-  z-index: 2;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 1px;
-  border: 4px solid $color-black;
-}
-
-.cropper-view-box:before {
-  content: " ";
-  position: absolute;
-  z-index: 2;
   top: 4px;
   left: 4px;
   right: 4px;
-  bottom: 5px;
+  bottom: 4px;
   border: 4px solid $color-primary;
 }
 
@@ -151,7 +139,28 @@ input[type=range] {
 }
 
 .cropper-line {
-  background-color: transparent;
+  background-color: $color-black;
+  opacity: 1;
+}
+
+.cropper-line.line-n {
+  top: 0;
+  height: 4px;
+}
+
+.cropper-line.line-e {
+  right: 0;
+  width: 4px;
+}
+
+.cropper-line.line-s {
+  bottom: 0;
+  height: 4px;
+}
+
+.cropper-line.line-w {
+  left: 0;
+  width: 4px;
 }
 
 .cropper-bg {
